syntax = "proto3";

package db.item;

import "item_id.proto";

message CreateItemResponse {
  db.item.ItemID id = 1;
}
